<resources>
    <string name="app_name">Apex Solutions</string>
    <string name="active_tasks">Active Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="log_hours">Log Hours</string>
    <string name="logout">Logout</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="please_speak_to_an_ia_workflow_admin">Please speak to an IA Workflow admin.</string>
    <!-- Spinner prompt for task selection in AdminTaskDetails -->
    <string name="select_task_prompt">Select a task</string>
</resources>