<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Login Header Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:paddingBottom="32dp"/>

    <!-- Email Input -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/input_background"
        android:padding="16dp"
        android:textColorHint="#C0C0C0"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:autofillHints="Email" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/input_background"
        android:padding="16dp"
        android:textColorHint="#C0C0C0"
        android:layout_marginBottom="32dp"
        android:inputType="textPassword"
        android:autofillHints="Password" />

    <!-- Sign In Button -->
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#32CD32"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginBottom="24dp"/>

    <!-- Sign Up Text -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#32CD32"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>